static/scss/_shortcodes.scss
.recent-updates {

  .update-list {
    list-style-type: none;
    padding-left: 0;

    @media all and (max-width: $xsmall-max-display) {
      padding-left: 20px;
      padding-right: 20px;
    }

    .update-story {
      margin-bottom: 10px;
      margin-top: 10px;
      position: relative;

      &:after {
        border-color: transparent transparent #54972c;
        border-style: solid;
        border-width: 0 0 12px 12px;
        bottom: -2px;
        content: '';
        display: block;
        height: 12px;
        position: absolute;
        right: -22px;
        width: 0;

        @media(max-width: $large-min-display) {
          right: -2px;
        }
      }
    }

    .update-title {
      @include color-block($offwhite, 2px, 2px, 0, 0, darken($offwhite, 5%));

      -o-transition: all 0.15s ease-in-out;
      -webkit-transition: all 0.15s ease-in-out;
      transition: all 0.15s ease-in-out;
      background-color: #fafafa;
      box-shadow: 2px 2px 0 0 #ededed;
      display: block;
      font-family: "Montserrat",sans-serif;
      font-size: 16px;
      font-weight: normal;
      height: 90px;
      line-height: 1.2;
      margin-bottom: 0;
      margin-top: 0;
      overflow: hidden;
      padding: 10px;
      width: 100%;

      @media(max-width: $large-min-display) {
        width: auto;
      }
    }

    a {
      -o-transition: all 0.15s ease-in-out;
      -webkit-transition: all 0.15s ease-in-out;
      color: #000;
      display: block;
      height: 100%;
      width: 100%;

      &:hover {
        text-decoration: none;
      }
    }
  }
}

.inthenews-item {
  .inthenews-title {
    margin-bottom: 0;
  }

  span {
    color: $grayLight;
    display: block;
  }
}

.faqs {
  .faq-header-hr {
    margin-top: 0;
  }

  .faq-item {
    font-size: 18px;
  }

  .faq-question {
    font-size: 18px;
    line-height: 1.3em;
    text-transform: uppercase;
  }

  .faq-q,
  .faq-a {
    color: #dfaf0d;
    font-weight: 700;
  }
}

.comments {
  font-size: 18px;

  .row {
    margin-bottom: 20px;
  }

  .comment-item {
    background-color: $light-yellow-color;
    padding: 25px;
  }

  .comment-date {
    font-weight: bold;
    text-transform: uppercase;
  }

  .comment-content {
    p {
      font-size: 18px;
    }
  }

  .comment-author {
    font-size: 15px;
    font-weight: bold;
  }
}

#comment-form {
  textarea,
  input {
    width: 100%;
  }
}

.post-type-search {
  .post-type-search-results {
    background-color: $light-yellow-color;
    display: none;
    margin-bottom: 10px;
    padding-top: 10px;

    .post-type-search-message {
      padding: 0 10px 10px;
    }
  }

  ul {
    list-style-type: none;

    li {
      &.pdf {
        list-style-image: url('../img/documents-pdf.png');
      }

      &.word {
        list-style-image: url('../img/documents-word.png');
      }

      &.document {
        list-style-image: url('../img/documents-doc.png');
      }

      &.zip {
        list-style-image: url('../img/documents-zip.png');
      }

      &.excel {
        list-style-image: url('../img/documents-excel.png');
      }

      &.powerpoint {
        list-style-image: url('../img/documents-ppt.png');
      }

      &.html {
        list-style-image: url('../img/documents-html.png');
      }
    }
  }
}

.events-wrapper {
  table {
    font-family: "Montserrat", sans-serif;
    font-size: 15px;

    &.events tbody tr:nth-child(2n+1) td, table.events tbody tr:nth-child(2n+1) th {
      background-color: $light-yellow-color !important;
      border-top: 1px solid $alt-color;
    }

    .date {
      width: 70px;
    }
  }

  .location {
    line-height: 13px;

    a {
      color: #666;
      font-size: 11px;
      text-transform: uppercase;
    }
  }
}

